RELEASE_NOTES.txt

Ongoing

For 1.1

- Added events onTitleClick, onSubtitleClick, onZoom.
- Set mouse cursor to hand when over clickable elements.
- Added tooltip on mouse over slides on either side.
